Revision history for {{$dist->name}}

{{$NEXT}}

5.025     2014-11-10 21:12:14-05:00 America/New_York
        - fix file.t failures with perl v5.14 and v5.16's Carp

5.024     2014-11-05 23:08:07-05:00 America/New_York
        - add the %Mint stash for minting defaults
        - quiet down some low-priority log lines
        - teeny tiny optimization by building dist prereqs structure lazily
        - avoid ever requiring v0 of ExtUtils::MakeMaker
        - fix a module-loading ordering issue in `dzil setup`

5.023     2014-10-30 22:56:42-04:00 America/New_York
        - optimizations to loading of heavyweight libraries in cmd line app
        - some tests are now skipped on Win32 to avoid filename insanity
        - files' added_by data should be more informative
        - conflicts with installed code is now detected and/or advertised

5.022     2014-10-27 22:55:53-04:00 America/New_York
        - several optimizations to how PPI is used
        - handle an empty ABSTRACT better
        - now properly merging distmeta fragments together without loss, using
          new CPAN::Meta::Merge
        - create Makefile.PL and Build.PL files earlier, so they're in the file
          list "the whole time"

5.021     2014-10-20 22:43:52-04:00 America/New_York
        - improve authordeps' ability to cope with version requirements and
          non-default plugin names
        - a few improvements to help given by "dzil help COMMAND"
        - fixes a situation where exclusion-regexp-building in GatherDir
          could mangle the given regexps
        - now properly merging distmeta fragments together without loss, using
          new CPAN::Meta::Merge (Karen Etheridge)
        - [PkgVersion] now properly skips over $VERSION assignments in
          comments (Karen Etheridge, github #322)
        - the building of manpages is supressed in [MakeMaker]-driven builds
        - lazily load quite a few more modules
        - avoid using user's ~/.dzil even more