@@ -51,6 +51,19 @@ has 'make_path' => (
   default => $Config{make} || 'make',
 );
 
+=attr static_attribution
+
+This option omits the version number in the "generated by"
+comment in the Makefile.PL.  For setups that copy the Makefile.PL
+back to the repo, this avoids churn just from upgrading Dist::Zilla.
+
+=cut
+
+has 'static_attribution' => (
+  isa => 'Bool',
+  is  => 'ro',
+);
+
 has '_runner' => (
   is   => 'ro',
   lazy => 1,
@@ -289,6 +302,11 @@ sub setup_installer {
   my $file = first { $_->name eq 'Makefile.PL' } @{$self->zilla->files};
 
   $self->log_debug([ 'updating contents of Makefile.PL in memory' ]);
+
+  my $attribution = $self->static_attribution
+    ? ref($self)
+    : sprintf("%s v%s", ref($self), $self->VERSION || '(dev)');
+
   my $content = $self->fill_in_string(
     $file->content,
     {
@@ -297,8 +315,7 @@ sub setup_installer {
       share_dir_code    => $self->share_dir_code,
       fallback_prereqs  => \($self->fallback_prereq_pm),
       WriteMakefileArgs => \$dumped_args,
-      generated_by      => \sprintf("%s v%s",
-                              ref($self), $self->VERSION || '(dev)'),
+      generated_by      => \$attribution,
     },
   );
 
